--- a/.github/workflows/lambdaDeploy.yml
+++ b/.github/workflows/lambdaDeploy.yml
@@ -18,6 +18,8 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: 20.x
+    
+    - name: Build
       run: |
         npm ci
         npm run build
