--- a/.github/workflows/lambdaDeploy.yml
+++ b/.github/workflows/lambdaDeploy.yml
@@ -21,8 +21,8 @@ jobs:
     
     - name: Build
       run: |
-        npm ci
-        npm run build
+        yarn
+        yarn build
     
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
