--- a/.github/workflows/lambdaDeploy.yml
+++ b/.github/workflows/lambdaDeploy.yml
@@ -22,6 +22,10 @@ jobs:
     - name: Build
       run: |
         pwd
+        ls
+        cd ..
+        pwd
+        ls
         yarn
         yarn build
     
