--- a/.github/workflows/lambdaDeploy.yml
+++ b/.github/workflows/lambdaDeploy.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Build
       run: |
         pwd
-        ls
         yarn
+        ls build
         yarn build
     
     - name: Configure AWS credentials
