--- a/.github/workflows/lambdaDeploy.yml
+++ b/.github/workflows/lambdaDeploy.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ github.AWS_REGION }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Deploy functions to Lambda
       env:
