--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,16 +20,23 @@ jobs:
         node-version: 20.x
     
     - name: Build
-      run: |
-        yarn
-        yarn build
-    
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: ${{ env.AWS_REGION }}
+      run: |
+        yarn
+        yarn build
+        echo $AWS_ACCESS_KEY_ID
+        echo $AWS_SECRET_ACCESS_KEY
+        echo $AWS_REGION
+    
+    - name: Configure AWS credentials
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ env.AWS_REGION }}
+      uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: $AWS_ACCESS_KEY_ID
         aws-secret-access-key: $AWS_SECRET_ACCESS_KEY
