--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,19 +20,18 @@ jobs:
         node-version: 20.x
     
     - name: Build
+      env:
+        AWS_ROLE: ${{ secrets.AWS_ROLE }}
       run: |
         yarn
         yarn build
-        echo ${{ secrets.GITHUB_TOKEN }}
-        echo ${{ secrets.AWS_ACCESS_KEY_ID }}
-        echo ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+        aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Deploy functions to Lambda
       env:
