--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,5 @@ jobs:
       env:
         DYNAMO_DB_TABLE: ${{ secrets.DYNAMO_DB_TABLE }}
       run: |
+        ls build
         node build/deploy.js
