--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
     - name: Build
       env:
         AWS_ROLE: ${{ secrets.AWS_ROLE }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        AWS_REST_API_ID: ${{ secrets.AWS_REST_API_ID }}
       run: |
         yarn
         yarn build
